Prevent input fields from going black in dark mode.

--- a/src/renderer/styles.scss
+++ b/src/renderer/styles.scss
@@ -28,3 +28,7 @@
 a {
     color: inherit;
 }
+
+input {
+    color: var(--color-text-primary);
+}
